@@ -1,3 +1,9 @@
+2005-06-02  Christian Neumair  <chris@gnome-de.org>
+
+	* modules/ftp-method.c: (get_list_command), (do_open_directory):
+	Use smarter method to figure out what "LIST" parameters a particular
+	FTP server supports. Fixes #48427.
+
 2005-05-30  Christian Kellner  <gicmo@gnome.org>
 
 	* libgnomevfs/gnome-vfs-mime.c:
